--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
 	{% assign home_url = current_prefix | append: "/" %}
 {% endif %}
 {% assign header_pages = site.pages | where: "include_in_header", true | where: "lang", header_lang %}
+{% assign header_pages = header_pages | sort: "nav_order" %}
 {% assign nav_class = "scroll" %}
 {% if header_pages.size == 0 %}
 	{% assign nav_class = "scroll languageOnly" %}
@@ -47,7 +48,13 @@
 	<nav class="{{ nav_class }}">
 		<ul>
 			{% for header_page in header_pages %}
-				<li><a {% if header_page.nav_style == "button" %}class="navButtonLink"{% endif %} href="{{ header_page.url | relative_url }}">{{ header_page.title }}</a></li>
+				{% assign is_active = false %}
+				{% if page.translation_key and header_page.translation_key and page.translation_key == header_page.translation_key %}
+					{% assign is_active = true %}
+				{% elsif page.url == header_page.url %}
+					{% assign is_active = true %}
+				{% endif %}
+				<li><a{% if is_active %} class="isActive"{% endif %} href="{{ header_page.url | relative_url }}"{% if is_active %} aria-current="page"{% endif %}>{{ header_page.title }}</a></li>
 			{% endfor %}
 			<li class="langSwitchItem">
 				<details class="langPicker">
