--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
                             {% endif %}
                         </div>
                         <div class="downloadButtonsContainer">
-                            <a class="appStoreLink" href="{{ site.appstore_link }}" target="_blank" rel="noopener noreferrer" data-prefer-api="true">
+                            <a class="appStoreLink" href="{{ site.appstore_link }}" target="_blank" rel="noopener noreferrer" data-prefer-api="true" data-td-event="download_link_click" data-td-location="home-hero">
                                 <img class="appStore" src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/{{ appstore_badge_locale }}?size=250x83" alt="{{ t.appstore_badge_alt | default: 'Download on the App Store' }}">
                             </a>
                         </div>
