--- a/_includes/head.html
+++ b/_includes/head.html
@@ -114,6 +114,37 @@
 	{% if site.enable_smart_app_banner %}
 		<meta name="apple-itunes-app" content="app-id={{ site.ios_app_id }}">
 	{% endif %}
+	{% if site.telemetrydeck_app_id %}
+		<script
+			src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
+			data-app-id="{{ site.telemetrydeck_app_id }}"
+		></script>
+		<script>
+			(function () {
+				document.addEventListener(
+					"click",
+					function (event) {
+						var target = event.target;
+						if (!target || !target.closest) {
+							return;
+						}
+						var trackedElement = target.closest("[data-td-event]");
+						if (!trackedElement) {
+							return;
+						}
+						if (!window.td || typeof window.td.signal !== "function") {
+							return;
+						}
+						window.td.signal(
+							trackedElement.getAttribute("data-td-event"),
+							{ location: trackedElement.getAttribute("data-td-location") || "" }
+						);
+					},
+					true
+				);
+			})();
+		</script>
+	{% endif %}
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script>
